--- a/Maze/Maze.csproj
+++ b/Maze/Maze.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{DCD28BAA-6A1C-4F86-968C-6ACB5E6863A6}</ProjectGuid>
+    <ProjectGuid>{7C4BA9CA-656F-4106-B2AC-3DB074A12385}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>DataStructure</RootNamespace>
-    <AssemblyName>DataStructure</AssemblyName>
+    <RootNamespace>Maze</RootNamespace>
+    <AssemblyName>Maze</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -50,14 +50,6 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Collections\Collections.csproj">
-      <Project>{0116e4c4-cdc7-40f8-8024-4bf4fd60946f}</Project>
-      <Name>Collections</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Lists\Lists.csproj">
-      <Project>{d9698e36-e7c1-40c6-8bb3-5bc428c2a1bc}</Project>
-      <Name>Lists</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Stacks\Stacks.csproj">
       <Project>{19351c41-2f4a-4723-be25-7ad5405db315}</Project>
       <Name>Stacks</Name>
