--- a/Queues/Queues.csproj
+++ b/Queues/Queues.csproj
@@ -41,9 +41,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="ArrayListQueue.cs" />
+    <Compile Include="LinkedListQueue.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Queue.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Collections\Collections.csproj">
+      <Project>{0116e4c4-cdc7-40f8-8024-4bf4fd60946f}</Project>
+      <Name>Collections</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Lists\Lists.csproj">
+      <Project>{d9698e36-e7c1-40c6-8bb3-5bc428c2a1bc}</Project>
+      <Name>Lists</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
