--- a/main/main.csproj
+++ b/main/main.csproj
@@ -49,5 +49,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Queues\Queues.csproj">
+      <Project>{0a578dae-acbd-4eb8-9a37-0043189fee45}</Project>
+      <Name>Queues</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
