--- a/Queues/Queues.csproj
+++ b/Queues/Queues.csproj
@@ -41,8 +41,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ArrayListPriorityQueue.cs" />
     <Compile Include="ArrayListQueue.cs" />
+    <Compile Include="ArrayQueue.cs" />
+    <Compile Include="LinkedListPriority.cs" />
     <Compile Include="LinkedListQueue.cs" />
+    <Compile Include="PriorityQueue.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Queue.cs" />
   </ItemGroup>
